--- a/arduino/.vscode/launch.json
+++ b/arduino/.vscode/launch.json
@@ -12,8 +12,8 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug",
-            "executable": "/Users/fabianfrey/Documents/PlatformIO/Projects/PimpMyNFC/.pio/build/megaatmega2560/firmware.elf",
-            "toolchainBinDir": "/Users/fabianfrey/.platformio/packages/toolchain-atmelavr/bin",
+            "executable": "/Users/michael/Git/PimpMyKicker/arduino/.pio/build/megaatmega2560/firmware.elf",
+            "toolchainBinDir": "/Users/michael/.platformio/packages/toolchain-atmelavr/bin",
             "preLaunchTask": {
                 "type": "PlatformIO",
                 "task": "Pre-Debug"
@@ -24,8 +24,8 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (skip Pre-Debug)",
-            "executable": "/Users/fabianfrey/Documents/PlatformIO/Projects/PimpMyNFC/.pio/build/megaatmega2560/firmware.elf",
-            "toolchainBinDir": "/Users/fabianfrey/.platformio/packages/toolchain-atmelavr/bin",
+            "executable": "/Users/michael/Git/PimpMyKicker/arduino/.pio/build/megaatmega2560/firmware.elf",
+            "toolchainBinDir": "/Users/michael/.platformio/packages/toolchain-atmelavr/bin",
             "internalConsoleOptions": "openOnSessionStart"
         }
     ]
