--- a/arduino/platformio.ini
+++ b/arduino/platformio.ini
@@ -12,6 +12,6 @@
 platform = atmelavr
 board = megaatmega2560
 framework = arduino
-upload_port = /dev/cu.wchusbserial1430
-lib_deps =
-  https://github.com/miguelbalboa/rfid.git
+; upload_port = /dev/cu.wchusbserial1410
+; lib_deps =
+  ; https://github.com/miguelbalboa/rfid.git
