--- a/arduino/platformio.ini
+++ b/arduino/platformio.ini
@@ -13,5 +13,5 @@ platform = atmelavr
 board = megaatmega2560
 framework = arduino
 ; upload_port = /dev/cu.wchusbserial1410
-; lib_deps =
-  ; https://github.com/miguelbalboa/rfid.git
+lib_deps =
+  https://github.com/miguelbalboa/rfid.git
